Added marks to the Users🫂
1. Complete Users Database Page
2. 10
3. Added indicators that will facilitate the way the user database is displayed

--- a/Client/Website/src/app/components/database/change/change.component.html
+++ b/Client/Website/src/app/components/database/change/change.component.html
@@ -53,9 +53,10 @@
                                 <td class="permissions">
                                     {{row | translate}}
                                 </td>
-                                <td class="permissions" *ngFor="let col of permissions?.columns; let i = index">
+                                <td class="permissions"
+                                    *ngFor="let col of permissions?.columns; let i = index">
 
-                                    <mat-checkbox (ngModelChange)="debug(i, row, $event)"
+                                    <mat-checkbox [disabled]="!modification_rule(this.data)" (ngModelChange)="debug(i, row, $event)"
                                         [ngModel]="permissions.retrieve(data, row)[i]"
                                         class="example-margin">
                                     </mat-checkbox>
@@ -93,14 +94,14 @@
                             <!-- Raw Text -->
                             <mat-form-field *ngIf="field.type === 'text'" class="full-width input">
                                 <mat-label class="label">{{formatLabel(field.key)}}</mat-label>
-                                <input class="input" [(ngModel)]="data[field.key]" matInput>
+                                <input [disabled]="!modification_rule(this.data)" class="input" [(ngModel)]="data[field.key]" matInput>
                             </mat-form-field>
 
                             <!-- Number -->
                             <mat-form-field *ngIf="field.type === 'number'"
                                 class="full-width input">
                                 <mat-label class="label">{{formatLabel(field.key)}}</mat-label>
-                                <input class="input" type="number" [(ngModel)]="data[field.key]"
+                                <input [disabled]="!modification_rule(this.data)" class="input" type="number" [(ngModel)]="data[field.key]"
                                     matInput>
                                 <div class="number-error"
                                     *ngIf="field.condition && data[field.key] ? !field.condition(data[field.key]) : false">
@@ -113,7 +114,7 @@
                                 class="full-width input"
                                 [color]="data[field.key] && !isNum(data[field.key].toString()) ? 'warn' : 'primary'">
                                 <mat-label class="label">{{formatLabel(field.key)}}</mat-label>
-                                <input [min]="field.type === 'positive_digits_string' ? 0 : -999999"
+                                <input [disabled]="!modification_rule(this.data)" [min]="field.type === 'positive_digits_string' ? 0 : -999999"
                                     class="input" [(ngModel)]="data[field.key]" matInput>
                                 <div class="number-error"
                                     *ngIf="!isNum(data[field.key].toString()) && data[field.key]">
@@ -128,11 +129,11 @@
                                 <mat-select [multiple]="field.type === 'choices'" class="input"
                                     [ngModel]="data[field.key]"
                                     (ngModelChange)="data[field.key]=$event">
-                                    <mat-option class="input"
+                                    <mat-option [disabled]="!modification_rule(this.data)" class="input"
                                         *ngFor="let type of field.choices.choices"
                                         [value]="field.choices.key ? field.choices.key(type) : type[0]">
-                                        {{field.choices.format ? field.choices.format(type[1]) :
-                                        type[1]}}
+                                        {{field.choices.format ? (field.choices.format(type[1]) | translate) :
+                                        type[1] + "" | translate}}
                                     </mat-option> </mat-select>
                             </mat-form-field>
 
@@ -141,10 +142,10 @@
                                 *ngIf="field.choices?.link && field.choices && (field.type === 'selection' || field.type === 'choices')"
                                 class="full-width input">
                                 <mat-label class="label">{{formatLabel(field.key)}}</mat-label>
-                                <mat-select [multiple]="field.type === 'choices'" class="input"
+                                <mat-select [disabled]="!modification_rule(this.data)" [multiple]="field.type === 'choices'" class="input"
                                     [ngModel]="data[field.key]"
                                     (ngModelChange)="data[field.key]=$event">
-                                    <mat-option class="input"
+                                    <mat-option [disabled]="!modification_rule(this.data)" class="input"
                                         *ngFor="let type of linked_data | keyvalue"
                                         [value]="field.choices.key ? field.choices.key([type.key, type.value]) : type.key">
                                         {{field.choices.format ? field.choices.format(type.value) :
@@ -188,8 +189,8 @@
         <tr>
             <td class="padded" style="text-align: right;">
                 <button style="width: 30%;" (click)="delete()" class="delete-btn" mat-button
-                    color="primary" *ngIf="modification_mode">Delete</button>
-                <button style="width: 30%;" class="back-btn"
+                    color="primary" *ngIf="modification_rule(this.data) && modification_mode">Delete</button>
+                <button *ngIf="modification_rule(this.data)" style="width: 30%;" class="back-btn"
                     (click)="modification_mode ? modify() : add()"
                     [disabled]="!fieldsCompleteness || !differenceCheck"
                     [style.background]="(!fieldsCompleteness || !differenceCheck) ? 'gray' : '#14274A'"
