--- a/Client/Website/src/app/components/database/blocks/table/table.component.html
+++ b/Client/Website/src/app/components/database/blocks/table/table.component.html
@@ -8,7 +8,7 @@
           <ng-container [matColumnDef]="col.key.toString()">
               <th mat-header-cell *matHeaderCellDef mat-sort-header>
                   {{col.header_alt || formatWord(col.key.toString())}} </th>
-              <td class="cell" mat-cell *matCellDef="let element">{{formatDataField(col,
+              <td [style.background]="mark(element[1])" class="cell" mat-cell *matCellDef="let element">{{formatDataField(col,
                   element)}}</td>
           </ng-container>
       </ng-container>
@@ -20,7 +20,7 @@
           <ng-container [matColumnDef]="col.key.toString()">
               <th mat-header-cell *matHeaderCellDef mat-sort-header>
                   {{col.header_alt || formatWord(col.key.toString())}} </th>
-              <td class="cell" mat-cell *matCellDef="let element">
+              <td [style.background]="mark(element[1])" class="cell" mat-cell *matCellDef="let element">
                   <mat-checkbox [(ngModel)]="element[1][col.key]" class="example-margin"
                       [disabled]="true">
                   </mat-checkbox>
@@ -35,7 +35,7 @@
           <ng-container [matColumnDef]="col.key.toString()">
               <th mat-header-cell *matHeaderCellDef mat-sort-header>
                   {{col.header_alt || formatWord(col.key.toString())}} </th>
-              <td class="cell" mat-cell *matCellDef="let element" style="padding-left: 0px;">
+              <td [style.background]="mark(element[1])" class="cell" mat-cell *matCellDef="let element" style="padding-left: 0px;">
                   <star-rating staticColor="ok" [readOnly]="true" [rating]="element[1][col.key]"
                       [showHalfStars]="true"></star-rating>
               </td>
