--- a/Client/Website/src/app/components/database/blocks/table/table.component.html
+++ b/Client/Website/src/app/components/database/blocks/table/table.component.html
@@ -8,7 +8,7 @@
           <ng-container [matColumnDef]="col.key.toString()">
               <th mat-header-cell *matHeaderCellDef mat-sort-header>
                   {{col.header_alt || formatWord(col.key.toString())}} </th>
-              <td [style.background]="mark(element[1])" class="cell" mat-cell *matCellDef="let element">{{formatDataField(col,
+              <td (mouseleave)="hovered = '-1'" (mouseenter)="hovered = element[0]" [style.background]="mark(element)" class="cell" mat-cell *matCellDef="let element">{{formatDataField(col,
                   element)}}</td>
           </ng-container>
       </ng-container>
