Added the last layer of permissions🫂
1. Complete Users Database Page
2. 10
3. Mirrored the type permissions with the individual permissions.

--- a/Client/Website/src/app/components/database/change/change.component.html
+++ b/Client/Website/src/app/components/database/change/change.component.html
@@ -142,7 +142,7 @@
                                 *ngIf="field.choices?.link && field.choices && (field.type === 'selection' || field.type === 'choices')"
                                 class="full-width input">
                                 <mat-label class="label">{{formatLabel(field.key)}}</mat-label>
-                                <mat-select [disabled]="!modification_rule(this.data)" [multiple]="field.type === 'choices'" class="input"
+                                <mat-select [multiple]="field.type === 'choices'" class="input"
                                     [ngModel]="data[field.key]"
                                     (ngModelChange)="data[field.key]=$event">
                                     <mat-option [disabled]="!modification_rule(this.data)" class="input"
