--- a/Client/Website/src/app/pages/admin/room-database/room-database.component.html
+++ b/Client/Website/src/app/pages/admin/room-database/room-database.component.html
@@ -1,2 +1,1 @@
-<app-database [data_injection]="data_injection"></app-database>
-<app-database [data_injection]="extra_injection"></app-database>
+<app-database [data_injection]="data_injection" [extra_injection]="extra_injection" [dual_fetcher]="dual_fetcher"></app-database>
