Created and Populated the Activities Extra Change Injection🏃
1. Complete Activity Database Page
2. 10
3. Created and tested the activities extra change injection that will allow the admin to modify, add and remove activities from the database.

--- a/Client/Website/src/app/pages/admin/activity-database/activity-database.component.html
+++ b/Client/Website/src/app/pages/admin/activity-database/activity-database.component.html
@@ -1,1 +1,1 @@
-<p>activity-database works!</p>
+<app-database [data_injection]="extra_injection" [change_injection]="extra_change_injection"></app-database>
