Created the Facilities Data Injection🏃
1. Complete Activity Database Page
2. 10
3. Created the facilities data injection that will fill the facilities table in the facilities db page.

--- a/Client/Website/src/app/pages/admin/activity-database/activity-database.component.html
+++ b/Client/Website/src/app/pages/admin/activity-database/activity-database.component.html
@@ -1,1 +1,1 @@
-<app-database [data_injection]="extra_injection" [change_injection]="extra_change_injection"></app-database>
+<app-database [data_injection]="data_injection"  [extra_injection]="extra_injection" [extra_change_injection]="extra_change_injection"></app-database>
