--- a/Client/Website/src/app/pages/admin/service-database/service-database.component.html
+++ b/Client/Website/src/app/pages/admin/service-database/service-database.component.html
@@ -1,1 +1,1 @@
-<p>service-database works!</p>
+<app-database [data_injection]="data_injection" [change_injection]="change_injection" [extra_injection]="extra_injection" [extra_change_injection]="extra_change_injection"></app-database>
