Worked on the Admin Dashboard Frontend🎛️
1. N/A
2. 10
3. Added the needed imports and anchors.

--- a/Client/Website/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/Client/Website/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,1 +1,47 @@
-<p>admin-dashboard works!</p>
+<p>Admin panel works!</p>
+<table class="footer">
+
+    <tr>
+
+        <td>
+            <a [routerLink]="['./user-database']" class="title-3">{{"User Database" | translate}}</a>
+        </td>
+        <td>
+            <a [routerLink]="['./rooms-database']" class="title-3">{{"Room Database" | translate}}</a>
+        </td>
+        <td>
+            <a [routerLink]="['./booking-database']" class="title-3">{{"Booking Database" | translate}}</a>
+        </td>
+        <td>
+            <a [routerLink]="['./food-database']" class="title-3">{{"Food Database" | translate}}</a>
+        </td>
+        <td>
+            <a [routerLink]="['./announcement-database']" class="title-3">{{"Announcement Database" | translate}}</a>
+        </td>
+        <td>
+            <a [routerLink]="['./language-database']" class="title-3">{{"Language Database" | translate}}</a>
+        </td>
+        <td>
+            <a [routerLink]="['./news-database']" class="title-3">{{"News Database" | translate}}</a>
+        </td>
+        <td>
+            <a [routerLink]="['./order-database']" class="title-3">{{"Order Database" | translate}}</a>
+        </td>
+        <td>
+            <a [routerLink]="['./promo-database']" class="title-3">{{"Promo-Code Database" | translate}}</a>
+        </td>
+        <td>
+            <a [routerLink]="['./registration-database']" class="title-3">{{"Registration Database" | translate}}</a>
+        </td>
+        <td>
+            <a [routerLink]="['./services-database']" class="title-3">{{"Services Database" | translate}}</a>
+        </td>
+        <td>
+            <a [routerLink]="['./stock-database']" class="title-3">{{"Stock Database" | translate}}</a>
+        </td>
+
+
+    </tr>
+
+
+</table>
