Handled frontend permissions🔧
1. N/A
2. 10
3. Added permission verification in the frontend.

--- a/Client/Website/src/app/components/database/blocks/table/table.component.scss
+++ b/Client/Website/src/app/components/database/blocks/table/table.component.scss
@@ -13,6 +13,14 @@ th {
 
 }
 
+.retry {
+
+    color: #14274A;
+    display: inline;
+    text-decoration: underline;
+
+}
+
 table {
 
     width: 100%;
