--- a/Client/Website/src/app/components/general/nav-bar/nav-bar.component.html
+++ b/Client/Website/src/app/components/general/nav-bar/nav-bar.component.html
@@ -31,6 +31,9 @@
         <tr>
 
             <td>
+                <a [routerLink]="['/admin/user-database']" class="title-3">{{"admin" | translate}}</a>
+            </td>
+            <td>
                 <a [routerLink]="['/home']" class="title-3">{{"home" | translate}}</a>
             </td>
             <td>
