--- a/Client/Website/src/app/components/database/blocks/table-unit/table-unit.component.scss
+++ b/Client/Website/src/app/components/database/blocks/table-unit/table-unit.component.scss
@@ -31,8 +31,12 @@
 
     background: #14274A;
     border: 1px solid #14274A;
-    // position: fixed;
-    // bottom: 16px;
-    // right: 16px;
+    
+}
 
+
+.add-btn:hover {
+    
+    border: 1px solid #4668a6;
+    background: #4668a6;
 }
