Designed the Admin Dashboard🎛️
1. N/A
2. 10
3. Designed the admin panel and established the necessary routes.

--- a/Client/Website/src/app/components/general/nav-bar/nav-bar.component.html
+++ b/Client/Website/src/app/components/general/nav-bar/nav-bar.component.html
@@ -16,7 +16,7 @@
                 </p>
             </td>
             <td style="text-align:end">
-                <button class="check-btn">
+                <button [routerLink]="['/admin']" class="check-btn">
                     {{ "admin_panel" | translate}}
                 </button>
                 <button class="check-btn">
