--- a/Client/Website/src/app/pages/admin/admin-dashboard/admin-dashboard.component.scss
+++ b/Client/Website/src/app/pages/admin/admin-dashboard/admin-dashboard.component.scss
@@ -29,3 +29,25 @@
     text-transform: uppercase;
 
 }
+.check-btn {
+
+    padding-top: 6px;
+    padding-bottom: 6px;
+    padding-left: 16px;
+    padding-right: 16px;
+    background: white;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 200;
+    font-size: 16px;
+    line-height: 25px;
+    margin-left: 30px;
+    margin-top: 20px;
+
+    text-transform: uppercase;
+    letter-spacing: 0.07em;
+
+    color: #14274A;
+
+    border: 1px solid #14274A;
+}
