Handled the rest of the frontend permissions🔧
1. N/A
2. 10
3. Added the remaining permission verification in the frontend.

--- a/Client/Website/src/app/components/database/change/change.component.scss
+++ b/Client/Website/src/app/components/database/change/change.component.scss
@@ -36,6 +36,12 @@
 
 }
 
+.back-btn:hover {
+    
+    border: 1px solid #4668a6;
+    background: #4668a6;
+}
+
 .delete-btn {
 
     font-family: 'Roboto';
@@ -55,6 +61,13 @@
 
     color: white;
 
+}
+
+
+.delete-btn:hover {
+    
+    border: 1px solid #4668a6;
+    background: #4668a6;
 }
 
 .content {
