Added a new linking system🔧
1. N/A
2. 10
3. Added a system that allows outer data fetching

--- a/Client/Website/src/app/components/database/blocks/table/table.component.html
+++ b/Client/Website/src/app/components/database/blocks/table/table.component.html
@@ -4,7 +4,7 @@
     <!-- Text | Price | Custom -->
     <ng-container *ngFor="let col of data_injection.displayed_columns">
         <ng-container
-            *ngIf="!col.type || col.type === 'text' || col.type === 'price' || col.type === 'custom' || col.type === 'link'">
+            *ngIf="!col.type || col.type === 'text' || col.type === 'price' || col.type === 'custom' || col.type === 'link' || col.type === 'outer_link'">
             <ng-container [matColumnDef]="col.key.toString()">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header>
                     {{col.header_alt || formatWord(col.key.toString())}} </th>
