--- a/Client/Website/src/app/components/database/database.component.html
+++ b/Client/Website/src/app/components/database/database.component.html
@@ -48,7 +48,7 @@
           </td>
           <td style="text-align: center;">
 
-            <app-table-unit (download)="dual_fetcher ? loadBothData() : loadPrimaryData()" [loading]="loading" [change_injection]="change_injection" [data_map]="all_data_map"
+            <app-table-unit [outer_data]="all_data_outer" (download)="dual_fetcher ? loadBothData() : loadPrimaryData()" [loading]="loading" [change_injection]="change_injection" [data_map]="all_data_map"
               [extra_data_map]="all_extra_map" [data]="all_data" [data_injection]="data_injection"
               [extra_data]="all_extra" [filtered_data]="filtered_data"
               (hover)="display_hover = $event"></app-table-unit>
