--- a/Client/Website/src/app/pages/admin/announcement-database/announcement-database.component.html
+++ b/Client/Website/src/app/pages/admin/announcement-database/announcement-database.component.html
@@ -1,1 +1,1 @@
-<app-database [data_injection]="data_injection"></app-database>
+<app-database [data_injection]="data_injection" [change_injection]="change_injection"></app-database>
