Designed the Browse Rooms Page🏡
1. Design, Implement and Link Rooms Page
2. 10
3. Designed the browse rooms page and implemented some basic logic. Fixed an issue with the nav bar.

--- a/Client/Website/src/app/components/general/nav-bar/nav-bar.component.html
+++ b/Client/Website/src/app/components/general/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<div class="main">
+<div class="main" [style.background]="transparent?'transparent':'#14274A'">
 
     <table style="table-layout: fixed; width: 100%">
         <tr>
@@ -7,8 +7,7 @@
                     EN
                 </p>
                 <img style="padding-left: 40px;" src="../../../assets/phone-icon.png" width="20vw">
-                <img style="padding-left: 48px;" src="../../../assets/message-icon.png"
-                    width="20vw">
+                <img style="padding-left: 48px;" src="../../../assets/message-icon.png" width="20vw">
             </td>
             <td style="text-align:center">
                 <p class="title-1">
