--- a/Client/Website/src/app/pages/guest/rooms/browse/browse-rooms.component.html
+++ b/Client/Website/src/app/pages/guest/rooms/browse/browse-rooms.component.html
@@ -1,1 +1,11 @@
-<p>rooms works!</p>
+<div class="nav">
+    <app-nav-bar [transparent]="true"></app-nav-bar>
+    <div class="title-container">
+        <p class="title-1">Welcome to</p>
+        <p class="title-2">Purple</p>
+        <p class="title-3">Motel</p>
+        <p class="title-4">Book your stay and enjoy Luxury<br>redefined at the most affordable
+            rates.</p>
+    </div>
+    <app-quick-availability class="quick-container"></app-quick-availability>
+</div>
