--- a/Client/Website/src/app/pages/guest/rooms/browse/browse-rooms.component.scss
+++ b/Client/Website/src/app/pages/guest/rooms/browse/browse-rooms.component.scss
@@ -51,3 +51,39 @@
     position: relative;
     bottom: -23%;
 }
+
+.header {
+
+    font-family: 'Abhaya Libre';
+    font-style: normal;
+    font-size: 48px;
+    letter-spacing: 0.02em;
+    color: #14274A;
+    width: 96%;
+    display: flex;
+    justify-content: center;
+    margin: 16px;
+    font-weight: 700;
+
+}
+
+.sub-header {
+
+
+    font-family: 'Montserrat';
+    font-weight: 400;
+    font-size: 12.5px;
+    line-height: 14.5px;
+    text-align: center;
+    color: #14274A;
+    margin: auto;
+    width:50%;
+
+}
+
+
+.item {
+    display: flex;
+    justify-content: center;
+    margin: auto;
+}
