--- a/Client/Website/src/app/components/database/blocks/table/table.component.scss
+++ b/Client/Website/src/app/components/database/blocks/table/table.component.scss
@@ -12,6 +12,15 @@ th {
     font-weight: 400;
 
 }
+.quick-btn {
+
+    font-family: 'Roboto' !important;
+    text-align: center;
+    // background-color: #14274A44 !important;
+    // color: white !important;
+    font-weight: 400;
+
+}
 
 .retry {
 
